# bullet3

./: .gitignore  CMakeLists.txt  physics_effects_license.txt
include/bullet_physics/: bt_math_conversions.h
include/bullet_physics/util/: bt_aligned_allocator.h  bt_aligned_object_array.h  bt_convex_hull_computer.h  bt_hash_map.h  bt_inplace_array.h
include/gpu_research/Adl/: Adl.h  Adl.inl  AdlConfig.h
include/gpu_research/AdlPrimitives/: stringifykernels.bat
include/physics_effects/low_level/: pfx_low_level_include.h
sample/: CMakeLists.txt
sample/api_bullet_physics/0_bt_stopwatch/: main.cpp
sample/api_bullet_physics/1_bt_arraytest/: premake4.lua
sample/api_bullet_physics/1_simple_convex/: main.cpp  physics_func.cpp  premake4.lua
sample/api_bullet_physics/test/0_stopwatch/: CMakeLists.txt  premake4.lua
sample/api_physics_effects/: CMakeLists.txt
src/: CMakeLists.txt
src/base_level/: CMakeLists.txt
src/bullet_physics/base_level/: CMakeLists.txt  premake4.lua
src/bullet_physics/base_level/collision/: bt_convex_polyhedron.cpp  bt_polyhedral_contact_clipping.cpp
src/bullet_physics/util/: CMakeLists.txt  btQuickprof.cpp  btQuickprof.h  bt_aligned_allocator.cpp  bt_convex_hull_computer.cpp  bt_stopwatch.cpp  premake4.lua
src/low_level/: CMakeLists.txt
src/util/: CMakeLists.txt
tests/: run_perl_tests.bat  run_tests.bat
tests/vecmath/: arch_defines.h  test.h  test_main.cpp  test_matrix3.cpp  test_matrix4.cpp  test_point3.cpp  test_quat.cpp  test_vec.cpp  test_vector3.cpp  test_vector4.cpp
tests/vs2008/: test1_aos_SSE_cpp.vcproj  test1_aos_scalar_cpp.vcproj  test2_aos_SSE_cpp.vcproj  test2_aos_scalar_cpp.vcproj  test3_aos_SSE_cpp.vcproj  test3_aos_scalar_cpp.vcproj  test4_aos_SSE_cpp.vcproj  test4_aos_scalar_cpp.vcproj  tests.sln
(+58 files in other folders)
